--- a/css/swd.css
+++ b/css/swd.css
@@ -41,6 +41,10 @@ and open the template in the editor.
     top: 0;
 }
 
+.header {
+    border-bottom: 1px solid black
+}
+
 .left.col {
     width: 215px;
     border: 1px solid green;
