--- a/css/swd.css
+++ b/css/swd.css
@@ -39,7 +39,7 @@ and open the template in the editor.
     height: 70px;
     line-height: 70px;
     top: 0;
-    background: blue;
+    background: #105cb6;
 }
 
 .header {
@@ -48,13 +48,13 @@ and open the template in the editor.
 
 .left.col {
     width: 215px;
-    background: red;
+    background: #ccc;
 }
 
 .right.col {
     left: 231px;
     right: 0;
-    background: green;
+    background: #aaa;
 }
 
 .body.row {
