--- a/css/swd.css
+++ b/css/swd.css
@@ -62,3 +62,9 @@ and open the template in the editor.
 .border {
     border: 1px solid #ccc
 }
+
+.ad.row {
+    height: 40px;
+    bottom: 0;
+    background-color: red;
+}
