--- a/css/swd.css
+++ b/css/swd.css
@@ -39,6 +39,7 @@ and open the template in the editor.
     height: 50px;
     line-height: 50px;
     top: 0;
+    background-color: blue;
 }
 
 .header {
