--- a/css/swd.css
+++ b/css/swd.css
@@ -77,7 +77,7 @@ and open the template in the editor.
 
 div.button-menu-main {
     right: 10px;
-    position: absolute;
+    float: right;
 }
 
 div.button-menu-groups {
