--- a/css/swd.css
+++ b/css/swd.css
@@ -39,11 +39,11 @@ and open the template in the editor.
     height: 50px;
     line-height: 50px;
     top: 0;
-    background-color: #ccc;
+/*    background-color: #ccc;*/
 }
 
 .header {
-    border-bottom: 1px solid black
+/*    border-bottom: 1px solid black*/
 }
 
 .left.col {
