--- a/css/swd.css
+++ b/css/swd.css
@@ -95,7 +95,7 @@ div.button-menu-groups {
     min-width: 100px;
 }
 
-div.post-tile {
+.post-tile {
     width: 120px;
     height: 120px;
     margin: 20px;
