--- a/css/swd.css
+++ b/css/swd.css
@@ -103,5 +103,13 @@ div.button-menu-groups {
     display: inline-block;
 }
 
-#group-feed-posts .ui-selecting { border: 10px solid #FECA40; }
-#group-feed-posts .ui-selected { border: 10px solid #F39814; color: white; }
+#group-feed-posts .ui-selecting { 
+    border: 10px solid #FECA40; 
+    margin: 10px;
+}
+
+#group-feed-posts .ui-selected { 
+    border: 10px solid #F39814; 
+    color: white; 
+    margin: 10px;
+}
