--- a/css/swd.css
+++ b/css/swd.css
@@ -102,6 +102,7 @@ div.button-menu-groups {
     background-color: blue;
     display: inline-block;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 #group-feed-posts .ui-selecting { 
