--- a/css/swd.css
+++ b/css/swd.css
@@ -49,7 +49,7 @@ and open the template in the editor.
 .control.row {
     height: 50px;
     line-height: 50px;
-    top: 60;
+    top: 60px;
 }
 
 .left.col {
