--- a/css/swd.css
+++ b/css/swd.css
@@ -130,5 +130,6 @@ div.right-toolbar-button {
     background-color: blue;
     position: absolute;
     display: block;
-    z-index: 10000;
+    top: 0;
+    left: 0;
 }
