--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,8 @@ textarea {
  */
 
 .hidden {
-    display: none !important;
+/*    display: none !important;*/
+    display: none;
     visibility: hidden;
 }
 
