--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ textarea {
 .hidden {
 /*    display: none !important;*/
     display: none;
-    visibility: hidden;
+/*    visibility: hidden;*/
 }
 
 /*
