--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,10 @@ div.right-toolbar-button {
     display: none;
 }
 
+.ui-tabs-panel {
+    overflow-y: auto;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
