--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,11 @@ div.right-toolbar {
     border-radius: 5px;
 }
 
+.post-caption {
+    height: 50px;
+    overflow-y: auto;
+}
+
 #feed-posts .ui-selecting { 
     border: 10px solid #FECA40; 
     margin: 10px;
@@ -207,10 +212,10 @@ div.right-toolbar-button {
     overflow-y: auto;
 }
 
-  #tabs-main .tabs-spacer { float: left; height: 200px; }
-  .tabs-bottom .ui-tabs-nav { clear: left; padding: 0 .2em .2em .2em; }
-  .tabs-bottom .ui-tabs-nav li { top: auto; bottom: 0; margin: 0 .2em 1px 0; border-bottom: auto; border-top: 0; }
-  .tabs-bottom .ui-tabs-nav li.ui-tabs-active { margin-top: -1px; padding-top: 1px; }
+#tabs-main .tabs-spacer { float: left; height: 200px; }
+.tabs-bottom .ui-tabs-nav { clear: left; padding: 0 .2em .2em .2em; }
+.tabs-bottom .ui-tabs-nav li { top: auto; bottom: 0; margin: 0 .2em 1px 0; border-bottom: auto; border-top: 0; }
+.tabs-bottom .ui-tabs-nav li.ui-tabs-active { margin-top: -1px; padding-top: 1px; }
 
 /* ==========================================================================
    Helper classes
