--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,7 @@ div.right-toolbar {
 .post-caption {
     height: 50px;
     overflow-y: auto;
+    font-size: 0.3em;
 }
 
 #feed-posts .ui-selecting { 
