--- a/css/main.css
+++ b/css/main.css
@@ -184,8 +184,9 @@ div.right-toolbar {
 
 .post-caption {
     height: 50px;
-    overflow-y: auto;
-    font-size: 0.3em;
+    overflow-y: no-display;
+    font-size: 0.5em;
+    background: #c0c0c0;
 }
 
 #feed-posts .ui-selecting { 
