--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,8 @@ div.right-toolbar {
 }
 
 .post-tile div img {
+    max-height: 130px;
+    max-width: 130px;
     display: block;
     margin-left: auto;
     margin-right: auto;
