--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@ div.right-toolbar {
     border: 4px solid transparent;
 }
 
-post-tile div:hover {
+.post-tile div:hover {
     border: 4px solid #a7a7a7;
 }
 
