--- a/css/main.css
+++ b/css/main.css
@@ -182,13 +182,13 @@ div.right-toolbar {
     border-radius: 5px;
 }
 
-.post-tile .post-image {
+.post-image {
     height: 130px;
     width: 130px;
     border: 4px solid transparent;
 }
 
-.post-tile .post-image:hover {
+.post-image:hover {
     border: 4px solid #a7a7a7;
 }
 
