--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,7 @@ div.right-toolbar {
 
 .post-caption {
     height: 50px;
+    margin-top: 3px;
     overflow-x: hidden;
     overflow-y: hidden;
     font-size: 0.7em;
