--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ div.right-toolbar {
     display: inline-block;
     cursor: pointer;
     border-radius: 5px;
-    background: #f0f0f0;
+    background: #c0c0c0;
     border: 4px solid transparent;
 }
 
