--- a/css/main.css
+++ b/css/main.css
@@ -180,17 +180,16 @@ div.right-toolbar {
     display: inline-block;
     cursor: pointer;
     border-radius: 5px;
-    background: #c0c0c0;
     border: 4px solid transparent;
+}
+
+.post-tile:hover {
+    border: 4px solid green;
 }
 
 .post-tile .post-image {
     height: 130px;
     width: 130px;
-}
-
-.post-tile:hover {
-    border: 4px solid #a7a7a7;
 }
 
 .post-tile div img {
