--- a/css/main.css
+++ b/css/main.css
@@ -174,21 +174,16 @@ div.right-toolbar {
 }
 
 .post-tile {
-    width: 130px;
-    height: 130px;
+    width: 132px;
+    height: 132px;
     margin: 20px;
     display: inline-block;
     cursor: pointer;
     border-radius: 5px;
-}
-
-.post-container {
     margin: 4px;
-    height: 128px;
-    width: 128px;
 }
 
-.post-container:hover {
+.post-tile:hover {
     border: 4px solid #a7a7a7;
     margin: 0px;
 }
@@ -198,7 +193,7 @@ div.right-toolbar {
     width: 130px;
 }
 
-.post-tile div div img {
+.post-tile div img {
     max-height: 130px;
     max-width: 130px;
     display: block;
