--- a/css/main.css
+++ b/css/main.css
@@ -174,13 +174,13 @@ div.right-toolbar {
 }
 
 .post-tile {
-    width: 132px;
-    height: 132px;
-    margin: 20px;
+    width: 140px;
+    height: 140px;
+    margin: 16px;
     display: inline-block;
     cursor: pointer;
     border-radius: 5px;
-    margin: 4px;
+    border: 4px solid transparent;
 }
 
 .post-tile:hover {
