--- a/css/main.css
+++ b/css/main.css
@@ -180,12 +180,16 @@ div.right-toolbar {
     display: inline-block;
     cursor: pointer;
     border-radius: 5px;
-/*    border: 4px solid transparent;*/
+    border: 4px solid transparent;
 }
 
 .post-container {
     width: 130px;
     height: 130px;
+}
+
+.post-container:hover {
+    border-color: #a7a7a7
 }
 
 .post-image {
