--- a/css/main.css
+++ b/css/main.css
@@ -180,15 +180,10 @@ div.right-toolbar {
     display: inline-block;
     cursor: pointer;
     border-radius: 5px;
-}
-
-.post-container {
-    width: 130px;
-    height: 130px;
     border: 4px solid transparent;
 }
 
-.post-container:hover {
+.post-tile:hover {
     border-color: #a7a7a7
 }
 
