--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,8 @@ div.right-toolbar-button {
     display: none;
 }
 
+/* JQuery UI Overrides */
+
 .ui-tabs-panel {
     overflow-y: auto;
 }
@@ -234,6 +236,14 @@ div.right-toolbar-button {
 .tabs-bottom .ui-tabs-nav { clear: left; padding: 0 .2em .2em .2em; }
 .tabs-bottom .ui-tabs-nav li { top: auto; bottom: 0; margin: 0 .2em 1px 0; border-bottom: auto; border-top: 0; }
 .tabs-bottom .ui-tabs-nav li.ui-tabs-active { margin-top: -1px; padding-top: 1px; }
+
+.ui-widget .ui-widget {
+    font-size: 0.8em;
+}
+
+.ui-widget {
+    font-size: 1.0em;
+}
 
 /* ==========================================================================
    Helper classes
