--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ textarea {
 }
 
 html {
-    font-size: 1em;
+    font-size: 2em;
     line-height: 1.4;
 }
 
@@ -237,13 +237,13 @@ div.right-toolbar-button {
 .tabs-bottom .ui-tabs-nav li { top: auto; bottom: 0; margin: 0 .2em 1px 0; border-bottom: auto; border-top: 0; }
 .tabs-bottom .ui-tabs-nav li.ui-tabs-active { margin-top: -1px; padding-top: 1px; }
 
-.ui-widget .ui-widget {
+/*.ui-widget .ui-widget {
     font-size: 0.9em;
 }
 
 .ui-widget {
     font-size: 0.9em;
-}
+}*/
 
 /* ==========================================================================
    Helper classes
