--- a/css/main.css
+++ b/css/main.css
@@ -173,18 +173,21 @@ textarea {
     border: red dashed;
 }
 
-div.toolbar {
-    margin-left: 5px;
+.float-left {
     float: left;
 }
 
-div.right-toolbar {
-    margin-right: 5px;
-    float: right;
+.left-margin {
+    margin-left: 5px;
 }
 
-.toolbar-button {
-    margin-left: 5px;
+.float-right {
+    float: right;
+    margin-right: 5px;
+}
+
+.right-margin {
+    margin-right: 5px;
 }
 
 .post-tile {
@@ -250,14 +253,6 @@ div.right-toolbar-button {
 .tabs-bottom .ui-tabs-nav { clear: left; padding: 0 .2em .2em .2em; }
 .tabs-bottom .ui-tabs-nav li { top: auto; bottom: 0; margin: 0 .2em 1px 0; border-bottom: auto; border-top: 0; }
 .tabs-bottom .ui-tabs-nav li.ui-tabs-active { margin-top: -1px; padding-top: 1px; }
-
-/*.ui-widget .ui-widget {
-    font-size: 0.9em;
-}
-
-.ui-widget {
-    font-size: 0.9em;
-}*/
 
 /* ==========================================================================
    Helper classes
