--- a/css/main.css
+++ b/css/main.css
@@ -226,8 +226,8 @@ textarea {
     height: 50px;
     line-height: 50px;
     top: 60px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 50%;
+    margin: 0 auto;
 }
 
 /*#feed-posts .ui-selecting { 
