--- a/css/main.css
+++ b/css/main.css
@@ -221,13 +221,13 @@ textarea {
     font-size: 0.9em;
 }
 
-#panel-post {
+#panel-image {
     width: 400px;
     height: 400px;
     background: green;
 }
 
-#panel-post img {
+#panel-image img {
     max-width: 300px;
     max-height: 300px;
     display: block;
