--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,7 @@ textarea {
     cursor: pointer;
     border-radius: 5px;
     border: 5px solid transparent;
+    background: green;
 }
 
 .post-tile:hover {
