--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ textarea {
 
 .post-caption {
     height: 55px;
-    margin-top: 3px;
+    margin: 4px;
     overflow-x: hidden;
     overflow-y: hidden;
     font-size: 0.9em;
