--- a/css/main.css
+++ b/css/main.css
@@ -211,8 +211,6 @@ textarea {
     max-height: 130px;
     max-width: 130px;
     display: block;
-/*    margin-left: auto;
-    margin-right: auto;*/
     position: absolute;
     top: 0;
     bottom: 0;
@@ -259,7 +257,9 @@ textarea {
 #panel-button-bar {
     position: absolute;
     bottom: 10px;
-    right: 10px;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 /*.paging {
