--- a/css/main.css
+++ b/css/main.css
@@ -231,10 +231,6 @@ textarea {
     display: block;
 }
 
-#panel-post {
-    position: relative;
-}
-
 #panel-image {
     top: 60px;
     height: 400px;
@@ -263,6 +259,7 @@ textarea {
     bottom: 10px;
     left: 0;
     right: 0;
+    width: 200px;
     margin: auto;
 }
 
