--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,7 @@ textarea {
 #panel-image {
     top: 60px;
     height: 400px;
+    position: relative;
     background: green;
 }
 
@@ -241,8 +242,12 @@ textarea {
     max-width: 300px;
     max-height: 300px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
 }
 
 #panel-comments {
