--- a/css/main.css
+++ b/css/main.css
@@ -260,7 +260,7 @@ textarea {
     margin: auto;
 }
 
-#panel-image div img {
+#panel-error-image {
     height: 100px;
     width: 100px;
     background: blue;
