--- a/css/main.css
+++ b/css/main.css
@@ -263,6 +263,10 @@ textarea {
 #panel-image div img {
     height: 100px;
     width: 100px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     display: block;
     background: blue;
 }
