--- a/css/main.css
+++ b/css/main.css
@@ -236,7 +236,7 @@ textarea {
     position: relative;
 }
 
-#panel-image-internal {
+#panel-image img {
     max-width: 300px;
     max-height: 300px;
     display: block;
