--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,7 @@ textarea {
     width: 100px;
     left: 0;
     right: 0;
-    top: 0;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     display: block;
