--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,8 @@ textarea {
     width: 100px;
     left: 0;
     right: 0;
-    margin-top: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     display: block;
