--- a/css/main.css
+++ b/css/main.css
@@ -273,6 +273,14 @@ textarea {
     background: blue;
 }
 
+#panel-post-permalink {
+    white-space: pre-wrap; /* css-3 */    
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */    
+    white-space: -o-pre-wrap; /* Opera 7 */    
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 #panel-image div span {
     display: block;
 }
