--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ textarea {
     left: 0;
     right: 0;
     margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 1em;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -274,6 +274,7 @@ textarea {
 }
 
 #panel-post-permalink {
+    margin-top: 1em;
     white-space: pre-wrap; /* css-3 */    
     white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
     white-space: -pre-wrap; /* Opera 4-6 */    
