--- a/css/main.css
+++ b/css/main.css
@@ -295,14 +295,10 @@ textarea {
     background: red;
     left: 0;
     right: 0;
-    position: absolute;
-    top: 470px;
 }
 
 #panel-button-bar {
-    position: absolute;
-    margin-top: 10px;
-    right: 10px;
+    margin-left: 10px;
 }
 
 /*.paging {
