--- a/css/main.css
+++ b/css/main.css
@@ -240,20 +240,20 @@ textarea {
 }
 
 #panel-image {
-    height: 400px;
-    position: relative;
+    max-height: 400px;
+/*    position: relative;*/
 }
 
 #panel-image .panel-post-image {
     max-width: 330px;
     max-height: 330px;
     display: block;
-    position: absolute;
+/*    position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
-    margin: auto;
+    margin: auto;*/
     border: 1px solid #ccc;
 }
 
@@ -261,11 +261,11 @@ textarea {
     max-width: 350px;
     max-height: 350px;
     display: block;
-    position: absolute;
+/*    position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
-    left: 0;
+    left: 0;*/
     margin: auto;
 }
 
