--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,7 @@ textarea {
 
 #panel-image {
     max-height: 400px;
+    top: 30px;
 /*    position: relative;*/
 }
 
@@ -248,6 +249,10 @@ textarea {
     max-width: 330px;
     max-height: 330px;
     display: block;
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
 /*    position: absolute;
     top: 0;
     bottom: 0;
