--- a/css/main.css
+++ b/css/main.css
@@ -225,11 +225,9 @@ textarea {
     margin-left: 4px;
     margin-right: 4px;
     margin-top: 4px;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
     font-size: 0.9em;
     display: block;
-    text-overflow: ellipsis;
 }
 
 .wrappable-link {
