--- a/css/main.css
+++ b/css/main.css
@@ -221,11 +221,11 @@ textarea {
 
 .post-caption {
     text-align: center;
-    height: 100px;
+    height: 6em;
     margin-left: 4px;
     margin-right: 4px;
     margin-top: 4px;
-    overflow: hidden;
+/*    overflow: hidden;*/
     font-size: 0.9em;
     display: block;
 }
@@ -330,14 +330,14 @@ p {
 
 .ellipsis {
     overflow: hidden;
-    height: 100px;
+    height: 6em;
 }
 
 .ellipsis:before {
     content:"";
     float: left;
     width: 5px; 
-    height: 100px; 
+    height: 6em; 
 }
 
 .ellipsis > *:first-child {
