--- a/css/main.css
+++ b/css/main.css
@@ -221,11 +221,11 @@ textarea {
 
 .post-caption {
     text-align: center;
-    height: 100px;
+    height: 110px;
     margin-left: 4px;
     margin-right: 4px;
     margin-top: 4px;
-/*    overflow: hidden;*/
+    overflow: hidden;
     font-size: 0.9em;
     display: block;
 }
@@ -328,24 +328,19 @@ p {
     padding: 0; 
 }
 
-.ellipsis {
-    overflow: hidden;
-    height: 100px;
-}
-
-.ellipsis:before {
+.post-caption:before {
     content:"";
     float: left;
     width: 5px; 
-    height: 100px; 
+    height: 115px; 
 }
 
-.ellipsis > *:first-child {
+.post-caption > *:first-child {
     float: right;
     width: 100%;
     margin-left: -5px; }        
 
-.ellipsis:after {
+.post-caption:after {
     content: "\02026";  
 
     box-sizing: content-box;
