--- a/css/main.css
+++ b/css/main.css
@@ -193,13 +193,13 @@ textarea {
     padding: 4px;
     display: inline-block;
     cursor: pointer;
-    border-radius: 5px;
-    border: 5px solid #a7a7a7;
+/*    border-radius: 5px;
+    border: 5px solid #a7a7a7;*/
 }
 
-.post-tile:hover {
+/*.post-tile:hover {
     border-color: #FECA40;
-}
+}*/
 
 .post-image {
     height: 130px;
