--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,7 @@ textarea {
     display: inline-block;
     cursor: pointer;
     font-weight: normal !important;
+    border: 1px solid transparent;
 /*    border-radius: 5px;
     border: 5px solid #a7a7a7;*/
 }
