--- a/css/main.css
+++ b/css/main.css
@@ -287,11 +287,17 @@ textarea {
     display: inline;
 }
 
+#panel-message-user {
+    margin-left: 5px;
+}
+
 #panel-message-name {
     display: inline;
+    margin-left: 5px;
 }
 
 #panel-message-text {
+    margin-top: 3px;
     display: block;
 }
 
