--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,10 @@ textarea {
     word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
+#panel-post * {
+    margin-bottom: 10px;
+}
+
 #panel-image {
     max-height: 400px;
     margin-top: 40px;
@@ -251,19 +255,18 @@ textarea {
     padding: 10px;
 }
 
-#panel-image div {
+#panel-no-image {
     max-width: 350px;
     max-height: 350px;
     padding: 10px;
     margin: auto;
 }
 
-#panel-image div img {
+#panel-no-image img {
     height: 100px;
     width: 100px;
     left: 0;
     right: 0;
-    margin-top: 5px;
     margin-bottom: 1em;
     margin-left: auto;
     margin-right: auto;
@@ -275,14 +278,14 @@ textarea {
     font-size: 0.9em;
 }
 
-#panel-image div span {
+#panel-no-image span {
     font-style: italic;
     font-size: 0.9em;
     display: block;
 }
 
-#panel-message {
-    margin: 10px;
+#panel-post {
+    padding: 10px;
 }
 
 #panel-message-pic {
@@ -299,21 +302,11 @@ textarea {
 }
 
 #panel-message-text {
-    margin-top: 10px;
     display: block;
-}
-
-#panel-comments {
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 #panel-nocomments {
     font-style: italic;
-}
-
-#panel-button-bar {
-    margin: 10px;
 }
 
 div.right-toolbar-button {
