--- a/css/main.css
+++ b/css/main.css
@@ -254,6 +254,15 @@ textarea {
     border: 1px solid #ccc;
 }
 
+#overlay-app-loading {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: white;
+}
+
 #panel-no-image {
     max-width: 350px;
     max-height: 350px;
