--- a/css/main.css
+++ b/css/main.css
@@ -336,8 +336,8 @@ div.right-toolbar-button {
 
 .ui-tabs-vertical { 
 /*    width: 55em; */
-/*    left: 0;
-    right: 0;*/
+    left: 0;
+    right: 0;
 }
 .ui-tabs-vertical .ui-tabs-nav { padding: .2em .1em .2em .2em; float: left; width: 12em; }
 .ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: 0 -1px .2em 0; }
@@ -345,7 +345,8 @@ div.right-toolbar-button {
 .ui-tabs-vertical .ui-tabs-nav li.ui-tabs-active { padding-bottom: 0; padding-right: .1em; border-right-width: 1px; border-right-width: 1px; }
 .ui-tabs-vertical .ui-tabs-panel { 
     padding: 1em; 
-    float: right; 
+    float: right;
+    right: 0;
 /*    width: 40em; */
 /*    right: 0;*/
 }
