--- a/css/main.css
+++ b/css/main.css
@@ -334,6 +334,23 @@ div.right-toolbar-button {
     overflow-y: auto;
 }
 
+.ui-tabs-vertical { 
+/*    width: 55em; */
+/*    left: 0;
+    right: 0;*/
+}
+.ui-tabs-vertical .ui-tabs-nav { padding: .2em .1em .2em .2em; float: left; width: 12em; }
+.ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: 0 -1px .2em 0; }
+.ui-tabs-vertical .ui-tabs-nav li a { display:block; }
+.ui-tabs-vertical .ui-tabs-nav li.ui-tabs-active { padding-bottom: 0; padding-right: .1em; border-right-width: 1px; border-right-width: 1px; }
+.ui-tabs-vertical .ui-tabs-panel { 
+    padding: 1em; 
+    float: right;
+    right: 0;
+/*    width: 40em; */
+/*    right: 0;*/
+}
+
 /*#tabs-main .tabs-spacer { float: left; height: 200px; }
 .tabs-bottom .ui-tabs-nav { clear: left; padding: 0 .2em .2em .2em; }
 .tabs-bottom .ui-tabs-nav li { top: auto; bottom: 0; margin: 0 .2em 1px 0; border-bottom: auto; border-top: 0; }
