--- a/css/main.css
+++ b/css/main.css
@@ -328,16 +328,25 @@ div.right-toolbar-button {
     display: none;
 }
 
+#group-feed {
+    left: 190px;
+    right: 0;
+}
+
+#main-nav {
+    width: 180px;
+}
+
 /* JQuery UI Overrides */
 
-.ui-tabs-panel {
+/*.ui-tabs-panel {
     overflow-y: auto;
 }
 
 .ui-tabs-vertical { 
-/*    width: 55em; */
-/*    left: 0;
-    right: 0;*/
+    width: 55em; 
+    left: 0;
+    right: 0;
 }
 .ui-tabs-vertical .ui-tabs-nav { padding: .2em .1em .2em .2em; float: left; width: 12em; }
 .ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: 0 -1px .2em 0; }
@@ -347,9 +356,9 @@ div.right-toolbar-button {
     padding: 1em; 
     float: right;
     right: 0;
-/*    width: 40em; */
-/*    right: 0;*/
-}
+    width: 40em; 
+    right: 0;
+}*/
 
 /*#tabs-main .tabs-spacer { float: left; height: 200px; }
 .tabs-bottom .ui-tabs-nav { clear: left; padding: 0 .2em .2em .2em; }
