--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,8 @@ textarea {
     display: none;
     z-index: 1000;
     position: absolute;
+    bottom: 0;
+    top: 0;
 }
 
 #right-panel .body.row {
