--- a/css/main.css
+++ b/css/main.css
@@ -242,6 +242,11 @@ textarea {
 }
 
 #panel-post-empty {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background: white;
 }
 
