--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,7 @@ div.right-toolbar-button {
 }
 
 #left-rail-nav {
-    list-style: none;
+    padding: 5px;
 }
 
 #main-toolbar {
@@ -352,9 +352,8 @@ div.right-toolbar-button {
 }
 
 .button-nav {
-    left: 0;
-    right: 0;
-    margin-top: 2px;
+    width: 100%;
+    margin-top: 4px;
 }
 
 /* JQuery UI Overrides */
