--- a/css/main.css
+++ b/css/main.css
@@ -154,8 +154,7 @@ textarea {
 }
 
 #ad-space {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 5px;
     border: red dashed;
 }
 
