--- a/css/main.css
+++ b/css/main.css
@@ -190,7 +190,7 @@ textarea {
     height: 150px;
     width: 200px;
     background-image: url('/img/no-image.jpg');
-    background-size: 100%;
+    background-size: 75%;
     background-repeat: no-repeat;
     background-position: center center;
     margin-bottom: 5px;
@@ -202,6 +202,19 @@ textarea {
     display: block;
     position: absolute;
     background: blue;
+}
+
+.post-tile-image .post-tile-primary-content{
+    height: 200px;
+    width: 200px;
+    background-image: url('/img/no-image.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.post-tile-image .post-tile-secondary-content-content{
+    display: none;
 }
 
 /*.post-tile-multi > img {
@@ -216,9 +229,7 @@ textarea {
     margin: auto;
 }*/
 
-.post-tile-image {
-    
-}
+
 
 .post-tile-text {
     
